fix: coversation section animation with framer motion, fix: emoji pop up positioning on mobile devices

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -86,7 +86,6 @@
     overflow: hidden;
   }
   em-emoji-picker {
-    background-color: #1e293b !important;
     width: 100%;
     margin-top: 0.5rem;
   }
